--- a/src/index.html
+++ b/src/index.html
@@ -62,11 +62,24 @@
         flex-grow: 1;
         flex-shrink: 0;
         justify-content: center;
+        margin-top: 5.25rem;
         padding: var(--space-vertical-08) var(--space-horizontal);
+      }
+
+      @media (min-width: 48em) {
+        .msrd main {
+          margin-top: 6.75rem;
+        }
       }
 
       .msrd section {
         max-width: 43rem;
+      }
+
+      @media (min-width: 48em) {
+        .msrd section {
+          max-width: 48rem;
+        }
       }
 
       .msrd .logotype {
@@ -90,7 +103,7 @@
         font-variation-settings: "wght" 725;
         font-weight: 700;
         letter-spacing: var(--font-09-letter-spacing);
-        margin-bottom: var(--space-vertical-04);
+        margin-bottom: var(--space-vertical-02);
         margin-top: 0;
       }
 
@@ -100,6 +113,7 @@
           font-variation-settings: "wght" 725;
           font-weight: 700;
           letter-spacing: var(--font-11-letter-spacing);
+          margin-bottom: var(--space-vertical-03);
         }
       }
 
@@ -109,6 +123,7 @@
           font-variation-settings: "wght" 725;
           font-weight: 700;
           letter-spacing: var(--font-13-letter-spacing);
+          margin-bottom: var(--space-vertical-04);
         }
       }
 
@@ -117,7 +132,7 @@
         font-variation-settings: "wght" 325;
         font-weight: 300;
         letter-spacing: var(--font-04-letter-spacing);
-        margin-bottom: var(--space-vertical-04);
+        margin-bottom: var(--space-vertical-06);
         margin-top: 0;
         white-space: nowrap;
       }
@@ -128,6 +143,7 @@
           font-variation-settings: "wght" 325;
           font-weight: 300;
           letter-spacing: var(--font-05-letter-spacing);
+          margin-bottom: var(--space-vertical-07);
         }
       }
 
@@ -137,21 +153,28 @@
           font-variation-settings: "wght" 325;
           font-weight: 300;
           letter-spacing: var(--font-06-letter-spacing);
-          margin-bottom: var(--space-vertical-06);
+          margin-bottom: var(--space-vertical-08);
         }
       }
 
       .msrd .logos {
         align-items: center;
+        color: var(--color-text-muted);
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: flex-start;
         list-style: none;
-        margin-bottom: calc(var(--space-vertical-04) * -1);
-        margin-left: calc(var(--space-horizontal-03) * -1);
-        margin-right: calc(var(--space-horizontal-03) * -1);
+        margin-bottom: calc(var(--space-vertical-03) * -1);
+        margin-left: calc(var(--space-horizontal-04) * -1);
+        margin-right: calc(var(--space-horizontal-04) * -1);
         margin-top: 0;
         padding-left: 0;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        .msrd .logos {
+          color: var(--color-text-inverted-muted);
+        }
       }
 
       .msrd .logo {
@@ -159,9 +182,9 @@
         color: inherit;
         display: flex;
         height: var(--space-vertical-04);
-        margin-bottom: var(--space-vertical-04);
-        margin-left: var(--space-horizontal-03);
-        margin-right: var(--space-horizontal-03);
+        margin-bottom: var(--space-vertical-03);
+        margin-left: var(--space-horizontal-04);
+        margin-right: var(--space-horizontal-04);
       }
 
       @media (min-width: 48em) {
@@ -225,22 +248,6 @@
               </a>
             </li>
             <li>
-              <a class="logo" href="https://www.scoota.com">
-                <svg
-                  aria-label="Scoota"
-                  class="logo-svg"
-                  role="img"
-                  viewBox="0 0 114 50"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8.216 17.284c3.287 0 5.772 1.157 7.495 2.672l-1.763 2.951c-1.163-1.276-3.287-2.313-5.732-2.313-2.204 0-3.566 1.037-3.566 2.392 0 3.39 11.703.838 11.703 8.493 0 3.429-2.847 6.021-8.056 6.021-3.327 0-6.293-1.076-8.297-3.03l1.924-2.991c1.363 1.396 4.048 2.672 6.533 2.672 2.525 0 3.847-1.037 3.847-2.552 0-3.788-11.702-1.077-11.702-8.493 0-3.15 2.725-5.822 7.614-5.822zm18.748 0c3.808 0 6.052 1.595 7.415 3.43l-2.766 2.511c-1.082-1.514-2.565-2.232-4.449-2.232-3.486 0-5.851 2.631-5.851 6.379 0 3.749 2.365 6.42 5.851 6.42 1.884 0 3.367-.797 4.449-2.313l2.766 2.592c-1.363 1.794-3.607 3.429-7.415 3.429-5.851 0-9.979-4.306-9.979-10.128 0-5.821 4.128-10.088 9.979-10.088zm17.021 0c6.172 0 9.939 4.546 9.939 10.088 0 5.503-3.767 10.128-9.939 10.128-6.172 0-9.94-4.625-9.94-10.128 0-5.542 3.768-10.088 9.94-10.088zm20.723 0c6.173 0 9.94 4.546 9.94 10.088 0 5.503-3.767 10.128-9.94 10.128-6.172 0-9.939-4.625-9.939-10.128 0-5.542 3.767-10.088 9.939-10.088zM81.637 12.5v5.263h3.928v3.628h-3.928v10.088c0 1.316.641 2.313 1.843 2.313.802 0 1.523-.359 1.844-.718l1.002 3.19c-.761.678-2.004 1.236-3.928 1.236-3.286 0-4.969-1.754-4.969-4.984V21.391h-3.206v-3.628h3.206V12.5h4.208zm14.427 4.784c2.177 0 4.054.567 5.573 1.543v-1.064h4.045v19.259h-4.045v-1.086c-1.519.987-3.396 1.564-5.573 1.564-6.172 0-9.94-4.625-9.94-10.128 0-5.542 3.768-10.088 9.94-10.088zm14.732 14.534c1.542 0 2.84 1.298 2.84 2.8 0 1.543-1.298 2.882-2.84 2.882-1.543 0-2.841-1.339-2.841-2.882 0-1.502 1.298-2.8 2.841-2.8zM43.985 20.993c-3.567 0-5.571 2.99-5.571 6.379 0 3.429 2.004 6.42 5.571 6.42 3.607 0 5.57-2.991 5.57-6.42 0-3.389-1.963-6.379-5.57-6.379zm20.723 0c-3.566 0-5.571 2.99-5.571 6.379 0 3.429 2.005 6.42 5.571 6.42 3.608 0 5.571-2.991 5.571-6.42 0-3.389-1.963-6.379-5.571-6.379zm31.356 0c-3.567 0-5.571 2.99-5.571 6.379 0 3.429 2.004 6.42 5.571 6.42 3.607 0 5.571-2.991 5.571-6.42 0-3.389-1.964-6.379-5.571-6.379z"
-                    fill="currentColor"
-                  />
-                </svg>
-              </a>
-            </li>
-            <li>
               <a class="logo" href="https://hubblehq.com">
                 <svg
                   aria-label="HubbleHQ"
@@ -251,22 +258,6 @@
                 >
                   <path
                     d="M45.63 22.393C41.783 12.296 29.963 7.85 19.85 7.885 8.592 7.922 2.019 14.608.375 25.67c-1.539 10.377 1.814 21.002 10.703 26.727 9.797 6.309 17.619 3.453 27.424-4.876 7.067-6.001 10.485-16.327 7.128-25.128zM28.5 44.432a.416.416 0 01-.411.41h-2.062a.414.414 0 01-.412-.41V35.32a.415.415 0 00-.411-.411H16.52a.415.415 0 00-.411.41v9.197a.414.414 0 01-.411.412h-2.06a.416.416 0 01-.411-.412V19.193c0-.226.186-.412.411-.413h2.06c.225.002.41.187.411.413v12.419c0 .226.185.412.411.413h11.567c.225.002.41.187.411.412l.002 11.995zm4.823.08a.414.414 0 01-.411.412h-2.061a.416.416 0 01-.411-.412V30.327a.416.416 0 00-.411-.411H18.437a.416.416 0 01-.411-.411v-2.061a.415.415 0 01.411-.411h11.59a.417.417 0 00.411-.413v-7.427c0-.226.186-.412.411-.413h2.06c.225.002.41.187.411.413l.003 25.319zM81.67 18.805h-3.188a.58.58 0 00-.573.573v9.728a.58.58 0 01-.574.573H65.492a.579.579 0 01-.573-.573v-9.728a.575.575 0 00-.572-.573h-3.184a.578.578 0 00-.572.573v25.128c0 .315.258.573.572.573h3.189a.575.575 0 00.572-.573V34.364c0-.314.259-.572.573-.572H77.34a.58.58 0 01.575.572v10.142c0 .315.258.573.572.573h3.183a.576.576 0 00.573-.573V19.378a.576.576 0 00-.573-.573zm20.337 7.775h-2.925a.578.578 0 00-.573.572v8.522c0 3.96-1.888 6.064-4.515 6.064-2.368 0-3.706-1.813-3.706-4.773v-9.816a.575.575 0 00-.572-.573h-2.921a.578.578 0 00-.572.573v10.49c0 4.739 2.627 7.809 6.883 7.809 2.368 0 4.33-1.036 5.403-2.885v1.943c0 .315.259.573.573.573h2.925a.576.576 0 00.573-.573V27.149a.578.578 0 00-.573-.57zm14.597-.374c-2.664 0-4.921 1.369-5.959 2.85V17.898a.575.575 0 00-.572-.573h-2.924a.579.579 0 00-.574.573v26.61a.58.58 0 00.574.573h2.924a.575.575 0 00.572-.573V42.6c1.033 1.479 3.295 2.843 5.959 2.843 5.07 0 8.927-4.33 8.927-9.62 0-5.292-3.857-9.617-8.927-9.617zm-.739 15.542c-3.294 0-5.558-2.591-5.558-5.92 0-3.33 2.257-5.922 5.558-5.922 3.255 0 5.512 2.59 5.512 5.922 0 3.33-2.257 5.92-5.512 5.92zm22.349-15.542c-2.664 0-4.921 1.369-5.957 2.85V17.898a.575.575 0 00-.572-.573h-2.926a.577.577 0 00-.572.573v26.61c0 .314.258.573.572.573h2.926a.575.575 0 00.572-.573V42.6c1.036 1.479 3.293 2.848 5.957 2.848 5.071 0 8.927-4.328 8.927-9.62 0-5.292-3.856-9.622-8.927-9.622zm-.739 15.542c-3.294 0-5.558-2.591-5.558-5.92 0-3.33 2.257-5.922 5.558-5.922 3.256 0 5.514 2.59 5.514 5.922 0 3.33-2.258 5.92-5.514 5.92zm15.82-24.431h-2.926a.577.577 0 00-.572.572v26.61c.002.314.259.57.572.573h2.926a.574.574 0 00.572-.572V17.889a.574.574 0 00-.572-.572zm21.851 18.066c0-5.96-4.071-9.177-8.918-9.177-5.632 0-9.669 4.192-9.659 9.64.01 5.558 4.8 9.878 10.353 9.585 3.306-.168 5.83-1.602 7.424-3.805a.566.566 0 00-.137-.794l-2.171-1.552a.574.574 0 00-.793.128c-1.01 1.38-2.648 2.34-4.98 2.34-3.072 0-5.514-1.998-5.7-5.033H174.3a.844.844 0 00.842-.828c.004-.172.004-.332.004-.504zm-14.395-1.63c.554-2.737 2.961-4.106 5.329-4.106s4.513 1.443 4.958 4.107h-10.287zm23.538-16.268h-1.125a.203.203 0 00-.202.202v3.438c0 .11-.091.202-.202.202h-4.187a.203.203 0 01-.202-.202v-3.441a.203.203 0 00-.202-.202h-1.125a.204.204 0 00-.204.202v8.882c0 .11.093.202.204.202h1.125a.203.203 0 00.202-.202V22.98c0-.111.091-.203.202-.203h4.179c.111 0 .202.092.202.203v3.585c0 .11.091.202.202.202h1.125a.204.204 0 00.204-.202v-8.882a.206.206 0 00-.196-.2zm11.726 8.926l-1.661-1.45a4.8 4.8 0 00.93-2.84c0-2.633-2.168-4.801-4.802-4.801-2.634 0-4.802 2.168-4.802 4.802 0 2.634 2.168 4.8 4.802 4.8 1.043 0 2.059-.34 2.892-.967l.857.76c.037.033.086.05.135.052h1.517a.203.203 0 00.132-.356zm-2.821-2.47l-1.348-1.178a.2.2 0 00-.286.021l-.65.75a.205.205 0 00.018.287l1.289 1.123a3.174 3.174 0 01-1.775.506c-1.853-.02-3.295-1.614-3.219-3.468a3.267 3.267 0 013.254-3.177c1.831 0 3.244 1.479 3.244 3.323a3.32 3.32 0 01-.527 1.814z"
-                    fill="currentColor"
-                  />
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="logo" href="https://www.hilton.com">
-                <svg
-                  aria-label="Hilton"
-                  class="logo-svg"
-                  role="img"
-                  viewBox="0 0 3056 1512"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M3002.2 241.308H51.229v1030.008H3002.2V241.308zm53.05 1083.058H0V187.577h3055.25v1136.789zm-735.18-670.82l41.06 4.787v368.859l-41.06 8.213v29.425h195.72v-28.738l-42.43-6.846V717.871s30.8-38.325 91.71-38.325c60.22 0 75.28 49.275 75.28 94.442v255.942l-36.28 4.791v30.109h188.88v-30.792l-36.95-5.475V754.171c0-60.192-27.38-138.267-122.5-138.267s-159.45 67.067-159.45 67.067v-59.538h-153.98v30.113zm-190.93 191.958c0-101.629-26-198.12-105.05-198.12-79.03 0-107.78 82.12-107.78 203.25 0 77.333 18.48 192.3 107.78 192.3 89.31 0 105.05-112.234 105.05-197.43m126.6.342c0 97.858-55.43 232.671-236.09 232.671-133.45 0-227.2-65.008-227.2-222.408 0-101.938 45.16-243.626 231.98-243.626 186.83 0 231.31 130.025 231.31 233.363m-548.21 169.788c-45.84 0-68.75-28.125-68.75-73.959V667.713h102.08v-42.709h-102.08v-125l-112.51 33.333v91.667h-81.25v42.709h81.25v306.253c0 62.5 32.3 96.388 103.13 96.388 70.84 0 144.79-32.846 144.79-32.846v-27.084s-20.83 5.209-66.66 5.209M1216.9 456.836l34.37 5.667v564.588l-34.37 6.25v29.167h190.62v-29.167l-38.54-4.167V429.171H1216.9v27.666-.001zm-177.71-37.958c-36.82 0-66.664 31.713-66.664 70.833 0 39.121 29.844 70.834 66.664 70.834s66.67-31.713 66.67-70.834c0-39.12-29.85-70.833-66.67-70.833M938.772 650.004l37.5 8.334v370.837l-37.5 4.167v29.167h191.668v-29.167l-33.33-4.167V625.006H938.772v25-.002zm-133.333-162.5v533.338l41.666 8.333v33.334H642.938v-33.334l41.667-8.333V779.175h-262.5v241.667l41.667 8.333v33.334H259.605v-33.334l41.667-8.333V487.504l-41.667-12.5v-29.167h204.167v33.334l-41.667 8.333v225h262.5v-225l-41.667-12.5v-29.167h204.167v33.334l-41.666 8.333z"
                     fill="currentColor"
                   />
                 </svg>
@@ -299,6 +290,38 @@
                 >
                   <path
                     d="M197.8 46.6h-6.348l-22.199-22.198h25.374v4.44h-14.586L197.8 46.6zm-3.176-40h-40v40h4.447V11.043h35.553V6.6zM10.882 36.463h3.939L10.448 27.6l.147-.043c2.291-.652 3.58-2.481 3.562-5.013-.032-3.684-2.316-5.796-6.265-5.796H.048v19.728h3.58v-8.15h3.506l3.748 8.139v-.002zM3.628 25.484V19.58h3.617c2.201 0 3.369 1.02 3.369 2.954 0 2.094-1.171 2.95-4.032 2.95H3.628zm25.743 2.18V24.71h-6.853v-5.013h9.395v-2.96H18.956v19.727h13.276V33.51h-9.714v-5.847h6.853v.001zm17.938-2.953h-6.66v-5.013h8.912v-2.96H37.088v19.727h3.58v-8.8h6.642V24.71l-.001.001zm6.513-7.975v19.729h3.562V16.736h-3.562zm30.866 0v19.729h3.563V16.736h-3.563zm21.94.001H92.616v2.954h5.231v16.774h3.58V19.69h5.231l-.028-2.954-.002.001zm4.33 0v19.728h3.562V16.736h-3.563l.001.001zm-35.625-.001v13.982h-.054l-8.067-13.963h-3.773v19.728h3.34V21.874h.054l4.404 7.68 3.967 6.91h3.48V16.736h-3.351zm56.058.001l-4.598 16h-.032l-4.622-16h-3.49l6.086 19.728h4.07l6.087-19.728h-3.501z"
+                    fill="currentColor"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="logo" href="https://www.hilton.com">
+                <svg
+                  aria-label="Hilton"
+                  class="logo-svg"
+                  role="img"
+                  viewBox="0 0 3056 1512"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M3002.2 241.308H51.229v1030.008H3002.2V241.308zm53.05 1083.058H0V187.577h3055.25v1136.789zm-735.18-670.82l41.06 4.787v368.859l-41.06 8.213v29.425h195.72v-28.738l-42.43-6.846V717.871s30.8-38.325 91.71-38.325c60.22 0 75.28 49.275 75.28 94.442v255.942l-36.28 4.791v30.109h188.88v-30.792l-36.95-5.475V754.171c0-60.192-27.38-138.267-122.5-138.267s-159.45 67.067-159.45 67.067v-59.538h-153.98v30.113zm-190.93 191.958c0-101.629-26-198.12-105.05-198.12-79.03 0-107.78 82.12-107.78 203.25 0 77.333 18.48 192.3 107.78 192.3 89.31 0 105.05-112.234 105.05-197.43m126.6.342c0 97.858-55.43 232.671-236.09 232.671-133.45 0-227.2-65.008-227.2-222.408 0-101.938 45.16-243.626 231.98-243.626 186.83 0 231.31 130.025 231.31 233.363m-548.21 169.788c-45.84 0-68.75-28.125-68.75-73.959V667.713h102.08v-42.709h-102.08v-125l-112.51 33.333v91.667h-81.25v42.709h81.25v306.253c0 62.5 32.3 96.388 103.13 96.388 70.84 0 144.79-32.846 144.79-32.846v-27.084s-20.83 5.209-66.66 5.209M1216.9 456.836l34.37 5.667v564.588l-34.37 6.25v29.167h190.62v-29.167l-38.54-4.167V429.171H1216.9v27.666-.001zm-177.71-37.958c-36.82 0-66.664 31.713-66.664 70.833 0 39.121 29.844 70.834 66.664 70.834s66.67-31.713 66.67-70.834c0-39.12-29.85-70.833-66.67-70.833M938.772 650.004l37.5 8.334v370.837l-37.5 4.167v29.167h191.668v-29.167l-33.33-4.167V625.006H938.772v25-.002zm-133.333-162.5v533.338l41.666 8.333v33.334H642.938v-33.334l41.667-8.333V779.175h-262.5v241.667l41.667 8.333v33.334H259.605v-33.334l41.667-8.333V487.504l-41.667-12.5v-29.167h204.167v33.334l-41.667 8.333v225h262.5v-225l-41.667-12.5v-29.167h204.167v33.334l-41.666 8.333z"
+                    fill="currentColor"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="logo" href="https://www.scoota.com">
+                <svg
+                  aria-label="Scoota"
+                  class="logo-svg"
+                  role="img"
+                  viewBox="0 0 114 50"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8.216 17.284c3.287 0 5.772 1.157 7.495 2.672l-1.763 2.951c-1.163-1.276-3.287-2.313-5.732-2.313-2.204 0-3.566 1.037-3.566 2.392 0 3.39 11.703.838 11.703 8.493 0 3.429-2.847 6.021-8.056 6.021-3.327 0-6.293-1.076-8.297-3.03l1.924-2.991c1.363 1.396 4.048 2.672 6.533 2.672 2.525 0 3.847-1.037 3.847-2.552 0-3.788-11.702-1.077-11.702-8.493 0-3.15 2.725-5.822 7.614-5.822zm18.748 0c3.808 0 6.052 1.595 7.415 3.43l-2.766 2.511c-1.082-1.514-2.565-2.232-4.449-2.232-3.486 0-5.851 2.631-5.851 6.379 0 3.749 2.365 6.42 5.851 6.42 1.884 0 3.367-.797 4.449-2.313l2.766 2.592c-1.363 1.794-3.607 3.429-7.415 3.429-5.851 0-9.979-4.306-9.979-10.128 0-5.821 4.128-10.088 9.979-10.088zm17.021 0c6.172 0 9.939 4.546 9.939 10.088 0 5.503-3.767 10.128-9.939 10.128-6.172 0-9.94-4.625-9.94-10.128 0-5.542 3.768-10.088 9.94-10.088zm20.723 0c6.173 0 9.94 4.546 9.94 10.088 0 5.503-3.767 10.128-9.94 10.128-6.172 0-9.939-4.625-9.939-10.128 0-5.542 3.767-10.088 9.939-10.088zM81.637 12.5v5.263h3.928v3.628h-3.928v10.088c0 1.316.641 2.313 1.843 2.313.802 0 1.523-.359 1.844-.718l1.002 3.19c-.761.678-2.004 1.236-3.928 1.236-3.286 0-4.969-1.754-4.969-4.984V21.391h-3.206v-3.628h3.206V12.5h4.208zm14.427 4.784c2.177 0 4.054.567 5.573 1.543v-1.064h4.045v19.259h-4.045v-1.086c-1.519.987-3.396 1.564-5.573 1.564-6.172 0-9.94-4.625-9.94-10.128 0-5.542 3.768-10.088 9.94-10.088zm14.732 14.534c1.542 0 2.84 1.298 2.84 2.8 0 1.543-1.298 2.882-2.84 2.882-1.543 0-2.841-1.339-2.841-2.882 0-1.502 1.298-2.8 2.841-2.8zM43.985 20.993c-3.567 0-5.571 2.99-5.571 6.379 0 3.429 2.004 6.42 5.571 6.42 3.607 0 5.57-2.991 5.57-6.42 0-3.389-1.963-6.379-5.57-6.379zm20.723 0c-3.566 0-5.571 2.99-5.571 6.379 0 3.429 2.005 6.42 5.571 6.42 3.608 0 5.571-2.991 5.571-6.42 0-3.389-1.963-6.379-5.571-6.379zm31.356 0c-3.567 0-5.571 2.99-5.571 6.379 0 3.429 2.004 6.42 5.571 6.42 3.607 0 5.571-2.991 5.571-6.42 0-3.389-1.964-6.379-5.571-6.379z"
                     fill="currentColor"
                   />
                 </svg>
